--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,7 @@
   --color-lokalisierung-secondary: #00bfbf;
   --color-abwesenheit-primary: #00789e;
   --color-abwesenheit-secondary: #65ffe8;
-  --color-gsheet-primary: #005f32;
+  --color-gsheet-primary: #005f32;der
   --color-gsheet-secondary: #00b577;
 
   /* Gradients */
