--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -18,7 +18,7 @@
 .section2 {
   width: 100%;
   background: var(--gradient-mid-to-sky);
-  padding: 4rem 0 0 0;
+  padding: 4rem 0;
 }
 
 .section2Container {
