--- a/app/globals.css
+++ b/app/globals.css
@@ -59,6 +59,7 @@
   --datev-color-1: #009b87;
   --datev-color-2: #78dc3c;
   --gradient-datev: radial-gradient(circle at center, var(--datev-color-2) 0%, var(--datev-color-2) 15%, var(--datev-color-1) 60%);
+  --gradient-datev-intro: radial-gradient(50% 50% at 50% 50%, rgba(255,255,255,0.8) 0%, #cdebe7 100%);
 
   /* Product Colors - Reisekosten */
   --reisekosten-color-1: #7bcfc9;
