--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -95,6 +95,7 @@
   border: none;
   cursor: pointer;
   transition: color 0.2s ease-in-out;
+  text-decoration: none;
 }
 
 .dropdownButton.active {
