--- a/app/globals.css
+++ b/app/globals.css
@@ -174,11 +174,18 @@ h6, .h6 {
 
 /* Mobile content width constraint */
 @media (max-width: 767px) {
+  /* Background sections full width */
+  section {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  /* Content containers 93% width */
   main,
-  section,
-  .container {
-    width: 95%;
-    max-width: 95%;
+  .container,
+  section > div:not(.absolute):not(.relative) {
+    width: 93%;
+    max-width: 93%;
     margin-left: auto;
     margin-right: auto;
   }
