--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -82,7 +82,7 @@
 }
 
 .dropdown {
-  position: static;
+  position: relative;
 }
 
 .dropdownButton {
@@ -207,17 +207,12 @@
 
 /* Mega Menu für Applications */
 .megaMenu {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 100%;
   width: 100vw;
   background-color: #eaf3f9;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
   z-index: 50;
   display: flex;
   flex-direction: column;
-  margin-left: calc(-50vw + 50%);
   opacity: 0;
   animation: fadeIn 0.2s ease-in-out forwards;
 }
